@@ -59,8 +59,8 @@
 	      <td>
 		<select name="db">
 		  <option value="airports" selected>OpenFlights</option>
+		  <option value="airports_oa">OurAirports</option>
 		  <option value="airports_dafif">DAFIF (Oct 2006)</option>
-		  <option value="airports_gad">Global Airport DB</option>
 		</select>&nbsp;&nbsp;
 	      </td>
 	      <td colspan=3>
