@@ -33,7 +33,7 @@
 
 	    <div id="news" style="display: none">
 	      <img src="/img/close.gif" height=17 width=17 onClick='JavaScript:closeNews()'> 
-	      <B>News</b>: 05 Feb 2009: <a href="/about.html#CHANGES">"Analyze" and popups fixed on Internet Explorer.</a>
+	      <B>News</b>: 06 Feb 2009: Over 1000 new airports from <a href="http://ourairports.com">OurAirports</a> added.</a>
 	    </div>
 	    
 	    <div id="ajaxloader">
